# model-serving-structure

./: README.md  api.py  deployment.yaml  pyproject.toml  tasks.py
common/: data.txt
