[project]
name = "model-serving-structure"
version = "0.1.0"
description = ""
authors = [
    {name = "Blurrr",email = "jooss287@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis] (>=5.4.0,<6.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "tasks (>=2.8.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false